--- a/pages/services.html
+++ b/pages/services.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="../assets/css/ui/navbar.css" />
     <link rel="stylesheet" href="../assets/css/ui/footer.css" />
     <link rel="stylesheet" href="../assets/css/services.css" />
+    <link rel="stylesheet" href="../assets/css/responsive/services_responsive.css" />
 </head>
 
 <body>
@@ -28,7 +29,7 @@
         <main>
             <div class="services-container">
                 <nav class="breadcrumb">
-                    <a href="../index.html">Trang chủ</a>
+                    <a href="index.html">Trang chủ</a>
                     <span>></span>
                     <span class="current">Dịch vụ</span>
                 </nav>
@@ -82,7 +83,7 @@
                     </div>
 
                     <!-- Sửa chữa nhà -->
-                    <div class="service-card">
+                    <!-- <div class="service-card">
                         <div class="service-icon">
                             <i class="ri-tools-line"></i>
                         </div>
@@ -99,7 +100,7 @@
                             <span>Xem chi tiết</span>
                             <i class="ri-arrow-right-line"></i>
                         </a>
-                    </div>
+                    </div> -->
 
                     <!-- Tư vấn thiết kế -->
                     <div class="service-card">
@@ -122,7 +123,7 @@
                     </div>
 
                     <!-- Thi công công trình -->
-                    <div class="service-card">
+                    <!-- <div class="service-card">
                         <div class="service-icon">
                             <i class="ri-building-2-line"></i>
                         </div>
@@ -139,10 +140,10 @@
                             <span>Xem chi tiết</span>
                             <i class="ri-arrow-right-line"></i>
                         </a>
-                    </div>
+                    </div> -->
 
                     <!-- Bảo trì nhà -->
-                    <div class="service-card">
+                    <!-- <div class="service-card">
                         <div class="service-icon">
                             <i class="ri-home-wifi-line"></i>
                         </div>
@@ -159,7 +160,7 @@
                             <span>Xem chi tiết</span>
                             <i class="ri-arrow-right-line"></i>
                         </a>
-                    </div>
+                    </div> -->
                 </div>
 
                 <!-- Why Choose Us Section -->
@@ -241,6 +242,7 @@
     </button>
 
     <script src="../assets/js/services.js"></script>
+    <script src="../assets/js/navbar.js"></script>
 </body>
 
 </html>
