--- a/pages/contact.html
+++ b/pages/contact.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="../assets/css/ui/navbar.css" />
   <link rel="stylesheet" href="../assets/css/ui/footer.css" />
   <link rel="stylesheet" href="../assets/css/contact.css" />
+  <link rel="stylesheet" href="../assets/css/responsive/contact_responsive.css" />
 </head>
 
 <body>
@@ -28,7 +29,7 @@
     <main>
       <div class="contact-container">
         <nav class="breadcrumb">
-          <a href="../index.html">Trang chủ</a>
+          <a href="index.html">Trang chủ</a>
           <span>></span>
           <span class="current">Liên hệ</span>
         </nav>
@@ -109,6 +110,7 @@
   </button>
 
   <script src="../assets/js/contact.js"></script>
+  <script src="../assets/js/navbar.js"></script>
 </body>
 
 </html>
